# light-c

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pack.ps1  package-lock.json  package.json  publish.ps1  update-log.md  update-logs.md  update-release.md  vite.config.ts
.tauri/: lightc.key.pub  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer-hooks-webview2-offline.nsh  installer-hooks.nsh  installer.nsh
src-tauri/rules/: programdata_rules.json
src-tauri/src/: commands.rs  data_dir.rs  lib.rs  main.rs  模块说明.md
src-tauri/src/ai_models/: mft_discovery.rs  mod.rs  model_file_rules.rs  scanner.rs  types.rs
src-tauri/src/cleaner/: delete_engine.rs  enhanced_delete.rs  mod.rs  permanent_delete.rs  safety_constants.rs
src-tauri/src/commands/: ai_models.rs  data.rs  delete.rs  disk.rs  hotspot.rs  leftovers.rs  logger_cmd.rs  mod.rs  programdata.rs  registry.rs  scan.rs  shell_icons.rs  social.rs  system.rs  tools.rs
src-tauri/src/disk_growth/: growth.rs  mft_scan.rs  snapshot.rs
src-tauri/src/driver_cleanup/: mod.rs
src-tauri/src/health_score/: mod.rs
src-tauri/src/logger/: mod.rs
src-tauri/src/scanner/: big_files.rs  categories.rs  context_menu.rs  deep_junk.rs  file_info.rs  hotspot.rs  leftovers.rs  mod.rs  programdata.rs  programdata_cleaner.rs  programdata_growth.rs  programdata_rules.rs  programdata_snapshot.rs  recycle_bin.rs  registry.rs  registry_scoring.rs  scan_engine.rs  shell_icons.rs  social_scanner.rs  模块说明.md
src-tauri/src/system_info/: mod.rs
(+84 files in other folders)
