[package]
name = "LightC"
version = "1.0.0"
description = "Windows C盘智能清理工具"
authors = ["chunyu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cleanup_c_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 文件系统操作
walkdir = "2"              # 递归遍历目录
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 日期时间处理
chrono = { version = "0.4", features = ["serde"] }
# Windows系统API
winapi = { version = "0.3", features = ["fileapi", "winbase", "handleapi", "errhandlingapi"] }
# Windows注册表操作
winreg = "0.55"
# 错误处理
thiserror = "1"
# 日志
log = "0.4"
env_logger = "0.11"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"
dirs = "6.0.0"

